nemesis/static/css/style.css
/* ... */
.aside .aside-dialog .aside-header .close {
    margin-right: -8px;
    padding: 4px 8px;
    color: white;
    font-size: 25px;
    opacity: .8;
}
.aside .aside-dialog .aside-body {
    position: relative;
    padding: 20px;
}
.aside .aside-dialog .aside-footer {
    margin-top: 15px;
    padding: 19px 20px 20px;
    text-align: right;
    border-top: 1px solid #e5e5e5;
}
.aside .aside-dialog .aside-footer .btn + .btn {
    margin-left: 5px;
    margin-bottom: 0;
}
.aside .aside-dialog .aside-footer .btn-group .btn + .btn {
    margin-left: -1px;
}
.aside .aside-dialog .aside-footer .btn-block + .btn-block {
    margin-left: 0;
}
.aside-backdrop {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1040;
    background-color: #000000;
}
.aside-backdrop.fade {
    opacity: 0;
    filter: alpha(opacity=0);
}
.aside-backdrop.in {
    opacity: 0.5;
    filter: alpha(opacity=50);
}


.table-bak th {
    text-align: center;
    vertical-align: middle !important;
}
.table-bak td[rowspan] + td[rowspan], .table-bak th[rowspan] + th[rowspan] {
   border-right-width: medium;
}

.modal-scrollable {
    overflow-y: auto;
}

.modal-scrollable .modal-dialog,
.modal-scrollable .modal-content {
    /* 90% of window height */
    height: 90%;
}

.modal-scrollable .modal-body {
    /* 100% = dialog height, 150px = header + footer */
    max-height: calc(100% - 150px);
    height: 100%;
    overflow-y: scroll;
}

.modal-scrollable-block {
    overflow: auto;
    border: solid;
    height: 600px;
}
.modal-scrollable-block2 {
    overflow: auto;
    height: 300px;
}

.modal-full-screen .modal-dialog,
.modal-full-screen .modal-content {
    height: 97%;
}
.modal-full-screen .modal-body {
    max-height: calc(100% - 150px);
    height: 100%;
}

button.text-left {
    text-align: left;
    padding-left: 10px;
}

a.pseudo-btn {
    padding: 6px 12px;
    cursor: pointer;
    text-decoration: underline;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
}

.label-no-bold {
    font-weight: normal;

}
.thesaurus-tree{
    max-height: calc(100% - 305px);
    height: 100%;
    overflow-y: auto;
}
.full-height{
    height: 100%;
}
.aside.full-height .wysiwyg-panel{
    max-height: 190px!important;
    overflow-y: auto!important;
}
.aside.full-height{
    max-width: 800px;
    overflow-y: hidden;
}

.inline-checkbox {
    margin: 0;
    padding-bottom: 0;
}
.dropdown-menu {
    max-height: 300px;
    overflow-y: auto;
}

.cursor-default {
    cursor: auto;
}

.cursor-pointer {
    cursor: pointer;
}

.header-sorter {
    margin-left: 10px;
    cursor: pointer;
}

.idle-modal p {
    text-align: center;
    font-size: larger;
}
.idle-modal .modal-header {
    text-align: center;
    background-color: #fcf8e3;
    border-color: #faebcc;
    color: #8a6d3b;
    -webkit-border-top-left-radius: 5px;
    -webkit-border-top-right-radius: 5px;
    -moz-border-radius-topleft: 5px;
    -moz-border-radius-topright: 5px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
.idle-modal .idle-countdown {
    text-align: center;
}
.idle-modal .modal-footer {
    text-align: center;
    margin-top: 0;
}

.pagination.pagination-nomargin {
    margin: 0;
}

.row .vertical-divider {
  border-right: 3px solid #d2def9;
}

/*formstamp widgets*/
.nopadding.fs-racheck,
.nopadding > .fs-racheck{
    padding: 0;
}

/* testing! */

.ng-invalid.form-control {
    border-color: #a94442;
    -webkit-box-shadow: inset 0 3px 3px rgba(0, 0, 0, .075);
    box-shadow: inset 0 3px 3px rgba(0, 0, 0, .075);
}

.ng-invalid.form-control:focus {
    border-color: #843534;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
}

.abs-alert{
    position: fixed;
    top: 20%;
    left: 35%;
    right: 35%;
    z-index: 1100;
}

.text-bold {
    font-weight: bold;
}
.text-white {
  color: #ffffff;
}
.sidebar-collapse .user-panel {
    display: none;
    visibility: hidden;
}

